--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "rollup": "^4.37.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.8.2",
     "vite": "^5.2.0"
