--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "classnames": "^2.5.1",
     "formik": "^2.4.6",
     "html2pdf.js": "^0.10.3",
     "moment": "^2.30.1",
     "number-to-words": "^1.2.4",
-    "primereact": "^10.6.5",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.3",
     "react": "^18.2.0",
     "react-barcode": "^1.5.3",
     "react-dom": "^18.2.0",
