--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.5.1",
     "formik": "^2.4.6",
     "html2pdf.js": "^0.10.3",
+    "lucide-react": "^0.487.0",
     "moment": "^2.30.1",
     "number-to-words": "^1.2.4",
     "primeicons": "^7.0.0",
