Your message here

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # VITE_BACKEND_URL=https://inventary-production.up.railway.app/api/v1
 
-VITE_RECAPTCHA_SITE_KEY=6LfP5PcqAAAAAJWaGUp69WCzyaQ9whXuSADqOud6
+# VITE_RECAPTCHA_SITE_KEY=6LfP5PcqAAAAAJWaGUp69WCzyaQ9whXuSADqOud6
 
 
 VITE_BACKEND_URL=http://localhost:8000/api/v1
