--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# VITE_BACKEND_URL=https://inventary-production.up.railway.app/api/v1
+VITE_BACKEND_URL=inventary-production-e5a5.up.railway.app
 
 # VITE_RECAPTCHA_SITE_KEY=6LfP5PcqAAAAAJWaGUp69WCzyaQ9whXuSADqOud6
 
