--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VITE_BACKEND_URL=inventary-production-e5a5.up.railway.app
+VITE_BACKEND_URL=https://inventary-production-e5a5.up.railway.app
+
 
 # VITE_RECAPTCHA_SITE_KEY=6LfP5PcqAAAAAJWaGUp69WCzyaQ9whXuSADqOud6
 
