--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ VITE_BACKEND_URL=https://inventary-production-e5a5.up.railway.app/api/v1
 # VITE_RECAPTCHA_SITE_KEY=6LfP5PcqAAAAAJWaGUp69WCzyaQ9whXuSADqOud6
 
 
-VITE_BACKEND_URL=http://localhost:8000/api/v1
+# VITE_BACKEND_URL=http://localhost:8000/api/v1
