--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "primereact": "^10.9.3",
     "react": "^18.2.0",
     "react-barcode": "^1.5.3",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.2.1",
     "react-pro-sidebar": "^1.1.0",
     "react-qr-code": "^2.0.15",
