--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-to-pdf": "^1.0.1",
+    "recharts": "^2.15.3",
     "sonner": "^1.4.41",
     "to-words": "^4.4.0",
     "yup": "^1.4.0"
